feat(system): switch the flow queue to v2